fixed screenager spacing for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -456,7 +456,7 @@ hr{
 
 #testimonials .copy{
   /*padding-top: 30px;*/
-  margin-bottom: 50px;
+  /*margin-bottom: 50px;*/
   color: #323533;
 }
 
@@ -487,12 +487,6 @@ hr{
 	max-width: 480px;
 }
 
-@media screen and (max-width: 480px) {
-	#testimonials .slider .slider-testimonials .screenager{
-		padding-left: 0;
-	}
-}
-
 #testimonials .slider .slider-testimonials .avatar{
   width: 100px;
   /*margin-left: 30%;*/
@@ -510,7 +504,27 @@ hr{
 
 @media screen and (max-width:480px) {
 	#testimonials .slider .slider-testimonials .copy{
-		width: 140px;
+		/*width: 140px;*/
+		width: 55%;
+
+		font-size: 15px;
+		letter-spacing: 1px;
+		display: block;
+		padding-left: 5px;
+		padding-top: 30px;
+		float: right;
+	}
+
+	#testimonials .slider .slider-testimonials .screenager{
+		padding-left: 0;
+	}
+
+	#testimonials .slider .slider-testimonials .avatar {
+    width: 40%;
+    margin-left: 0;
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
 	}
 }
 
